prep for i18n, public/help and public/myaccount

--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -62,4 +62,7 @@
   </div><!-- role=main -->
 </div><!--content div-->
   
-  <TMPL_INCLUDE NAME="footer.tmpl">
+<!-- just to test i18n, temporarily... corresponding entry in PostgreSQL -->
+<div id="DC-testing" style="display:none"></div>
+
+<TMPL_INCLUDE NAME="footer.tmpl">
