--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -36,119 +36,7 @@
   <script type="text/javascript" src="/js/jquery.cookie.js"></script>
   <script type="text/javascript" src="/js/menu-counters-1.2.js"></script>
   <script type="text/javascript" src="/js/i18n.js" charset="UTF-8"></script>
-
-  <script type="text/javascript">
-  $('document').ready(function(){
-
-    i18n_load();
-
-    setFontSizeFromCookies();
-
-    $('#incrFont').click(function () {
-        increaseFontSize();
-    });
-    $('#decrFont').click(function () {
-        decreaseFontSize();
-    });
-    $('#resetFont').click(function () {
-        resetFontSizeToDefault();
-    });
-
-    $("#startOver").on("click",function(e){
-        e.preventDefault();
-        $.removeCookie("fILL-oid", { path: '/' });
-        $.removeCookie("fILL-location", { path: '/' });
-        $.removeCookie("fILL-barcode", { path: '/' });
-        $.removeCookie("fILL-authentication", { path: '/' });
-        $.removeCookie("fILL-language", { path: '/' });
-        $("#breadcrumbs").hide();
-        $("#extAuth").hide();
-        $("#fILLAuth").hide();
-        $("#sign-in").hide();
-        $(".login-footer").append("<p>Starting over...</p>");
-        window.location.href="/cgi-bin/public.cgi";
-    });
-    $("#clearCookies").on("click",function(e){
-        e.preventDefault();
-        $.removeCookie("fILL-oid", { path: '/' });
-        $.removeCookie("fILL-location", { path: '/' });
-        $.removeCookie("fILL-barcode", { path: '/' });
-        $.removeCookie("fILL-authentication", { path: '/' });
-        $.removeCookie("fILL-language", { path: '/' });
-        window.location.href="?authen_logout=1";
-    });
-<!--
-    $( "#language" ).selectmenu({
-        change: i18n_select_change,
-        width : 150
-    });
--->
-    if (typeof $.cookie('fILL-language') != 'undefined') {
-        var lang = $.cookie('fILL-language');
-        //console.debug('cookie: '+lang+', setting selector and triggering event');
-        lang = i18n_code2language( lang );
-        $("#language").val( lang );
-        $("#language").selectmenu('refresh').trigger("selectmenuchange");
-    }
-
-    if (window.location.hostname == 'rigel.gotdns.org') {
-	$("#localdev").show();
-    }
-    if (window.location.hostname == 'fill-dev.mb.libraries.coop') {
-	$("#filldev").show();
-    }
-
-  });
-  </script>
-
-  <script type="text/javascript">
-
-  function set_primary_tab(tab_id) {
-    document.getElementById(tab_id).className='current_tab';
-  }
-
-  function set_secondary_tab(tab_id) {
-    document.getElementById(tab_id).className='current_tab';
-  }
-
- function increaseFontSize() {
-    $('body').find('div, h1, h2, h3, p, td').each(function () {
-        var fs = parseFloat($(this).css('font-size')) + 1;  // gets converted to px
-        $(this).css({
-            'font-size': fs + "px"
-        });
-        $.cookie('fILL-fontsize-'+$(this)[0].tagName, fs, { expires: 365, path: '/' });
-    });
- }
- function decreaseFontSize() {
-    $('body').find('div, h1, h2, h3, p, td').each(function () {
-        var fs = parseFloat($(this).css('font-size')) - 1;
-        $(this).css({
-            'font-size': fs + "px"
-        });
-        $.cookie('fILL-fontsize-'+$(this)[0].tagName, fs, { expires: 365, path: '/' });
-    });
-  } 
- function resetFontSizeToDefault() {
-    $('body').find('div, h1, h2, h3, p, td').each(function () {
-        if (typeof $.cookie('fILL-fontsize-'+$(this)[0].tagName) != 'undefined') {
-            $.removeCookie('fILL-fontsize-'+$(this)[0].tagName, { expires: 365, path: '/' });
-        }
-    });
-    location.reload();
-  } 
- function setFontSizeFromCookies() {
-    $('body').find('div, h1, h2, h3, p, td').each(function () {
-        if (typeof $.cookie('fILL-fontsize-'+$(this)[0].tagName) != 'undefined') {
-            var fs = $.cookie('fILL-fontsize-'+$(this)[0].tagName);
-            $(this).css({
-                'font-size': fs + "px"
-            });
-        }
-    });
-  } 
-
-  </script>
+  <script type="text/javascript" src="/js/public-header-functions-1.0.js"></script>
 
   <!-- Google analytics -->
   <script>
