moved the wait.gif into htdocs/img - then new fILL.conf rewrite rules were having conniptions with it

--- a/templates/admin/authentication_tests.tmpl
+++ b/templates/admin/authentication_tests.tmpl
@@ -30,7 +30,7 @@
     </div>
 
     <div id="waitDiv" style="display:none">
-      Loading... <img src="/wait.gif" alt="loading indicator">
+      Loading... <img src="/img/wait.gif" alt="loading indicator">
     </div>
 
     <div id="no-data">
@@ -76,7 +76,7 @@
     </div>
 
     <div id="waitDiv-testing">
-      Testing... <img src="/wait.gif" alt="loading indicator">
+      Testing... <img src="/img/wait.gif" alt="loading indicator">
     </div>
 
     <div id="test-results">
