--- a/templates/info/board-monthly.tmpl
+++ b/templates/info/board-monthly.tmpl
@@ -22,7 +22,7 @@
 </div>
 
 <div id="waitDiv">
-  Generating report... <img src="/wait.gif" alt="loading indicator">
+  Generating report... <img src="/img/wait.gif" alt="loading indicator">
 </div>
 
 <div id="report-content">
