--- a/templates/info/borrowers-lenders.tmpl
+++ b/templates/info/borrowers-lenders.tmpl
@@ -28,7 +28,7 @@ $.ajaxSetup ({
   </div>
 
   <div id="waitDiv">
-    Calculating... <img src="/wait.gif" alt="loading indicator">
+    Calculating... <img src="/img/wait.gif" alt="loading indicator">
   </div>
 
   <div id="myDiv">
