--- a/templates/info/ill_stats.tmpl
+++ b/templates/info/ill_stats.tmpl
@@ -11,7 +11,7 @@
 <div id="center" role="main">
 
   <div id="waitDiv">
-    Compiling statistics... <img src="/wait.gif" alt="loading indicator">
+    Compiling statistics... <img src="/img/wait.gif" alt="loading indicator">
   </div>
 
     <div id="myDiv">
