--- a/templates/info/report-folder.tmpl
+++ b/templates/info/report-folder.tmpl
@@ -130,7 +130,7 @@ $('document').ready(function(){
       <h3>Report folder</h3>
 
       <div id="waitDiv">
-	Loading... <img src="/wait.gif" alt="loading indicator">
+	Loading... <img src="/img/wait.gif" alt="loading indicator">
       </div>
 
       <div id="tabs">
