--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -198,7 +198,7 @@
 	      
               <input id="testPatronButton" type="button" class="library-style" value="Test!">
 	      <div id="waitDiv">
-		Testing... <img src="/wait.gif" alt="loading indicator">
+		Testing... <img src="/img/wait.gif" alt="loading indicator">
 	      </div>
 	  </form>
 	</div> <!-- test results div -->
