--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -62,7 +62,7 @@
         </fieldset>
 	
       <div id="waitDiv" style="display:none">
-        Authenticating... <img src="/wait.gif" alt="loading indicator">
+        Authenticating... <img src="/img/wait.gif" alt="loading indicator">
       </div>
 
       </div> <!-- div id extAuth -->
