--- a/templates/search/history.tmpl
+++ b/templates/search/history.tmpl
@@ -27,7 +27,7 @@ $.ajaxSetup ({
   <div style="clear:both"></div>
 
   <div id="waitDiv">
-    Getting requests from history... <img src="/wait.gif" alt="loading indicator">
+    Getting requests from history... <img src="/img/wait.gif" alt="loading indicator">
   </div>
   
   <div id="tabs">
