--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -42,7 +42,7 @@ $.ajaxSetup ({
 
 
   <div id="waitDiv">
-    Loading... <img src="/wait.gif" alt="loading indicator">
+    Loading... <img src="/img/wait.gif" alt="loading indicator">
   </div>
 
   <div id="myDiv">
