--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -13,7 +13,7 @@
     <div id="zserver">
       <p id="libsym" style="display:none"><TMPL_VAR NAME="libsym"></p>
       <a href="/cgi-bin/myaccount.cgi?rm=myaccount_test_zserver_form"><h3>Z Server Status Check</h3></a>
-      <div id="waitDiv">Checking...<img src="/wait.gif" alt="loading indicator"></div>
+      <div id="waitDiv">Checking...<img src="/img/wait.gif" alt="loading indicator"></div>
       <div class="zstatus">Z Server Present <span id="zPresent" class="zno">...</span></div>
       <div class="zstatus">Able to Connect <span id="zConnect" class="zno">...</span></div>
       <div class="zstatus">Able to Search <span id="zSearch" class="zno">...</span></div>
@@ -64,28 +64,28 @@
 	</thead>
 	<tbody>
 	  <tr>
-	    <td><a id="glance-new-patron-requests" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=new_patron_requests">New patron requests: <img src="/wait.gif" alt="loading indicator"></a></td>
-	    <td><a id="glance-waiting-for-response" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=respond">Waiting for response: <img src="/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-new-patron-requests" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=new_patron_requests">New patron requests: <img src="/img/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-waiting-for-response" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=respond">Waiting for response: <img src="/img/wait.gif" alt="loading indicator"></a></td>
 	  </tr>
 	  <tr>
-	    <td><a id="glance-pending" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=pending">Pending: <img src="/wait.gif" alt="loading indicator"></a></td>
-	    <td><a id="glance-on-hold" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=on_hold">On hold: <img src="/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-pending" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=pending">Pending: <img src="/img/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-on-hold" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=on_hold">On hold: <img src="/img/wait.gif" alt="loading indicator"></a></td>
 	  </tr>
 	  <tr>
-	    <td><a id="glance-unfilled" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=unfilled">Unfilled: <img src="/wait.gif" alt="loading indicator"></a></td>
-	    <td><a id="glance-on-hold-cancelled" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=on_hold">On hold, but request cancelled by borrower: <img src="/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-unfilled" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=unfilled">Unfilled: <img src="/img/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-on-hold-cancelled" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=on_hold">On hold, but request cancelled by borrower: <img src="/img/wait.gif" alt="loading indicator"></a></td>
 	  </tr>
 	  <tr>
-	    <td><a id="glance-holds" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=holds">Holds placed by lender: <img src="/wait.gif" alt="loading indicator"></a></td>
-	    <td><a id="glance-shipping" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=shipping">Ready to ship: <img src="/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-holds" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=holds">Holds placed by lender: <img src="/img/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-shipping" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=shipping">Ready to ship: <img src="/img/wait.gif" alt="loading indicator"></a></td>
 	  </tr>
 	  <tr>
-	    <td><a id="glance-cannot-renew" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=renewals">Could not be renewed: <img src="/wait.gif" alt="loading indicator"></a></td>
-	    <td><a id="glance-renewalRequests" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=renew_answer">Renewal requests: <img src="/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-cannot-renew" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=renewals">Could not be renewed: <img src="/img/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-renewalRequests" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=renew_answer">Renewal requests: <img src="/img/wait.gif" alt="loading indicator"></a></td>
 	  </tr>
 	  <tr>
-	    <td><a id="glance-overdue" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=overdue">Overdue: <img src="/wait.gif" alt="loading indicator"></a></td>
-	    <td><a id="glance-lost" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=lost">Lost: <img src="/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-overdue" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=overdue">Overdue: <img src="/img/wait.gif" alt="loading indicator"></a></td>
+	    <td><a id="glance-lost" class="at-a-glance-link" href="/cgi-bin/lightning.cgi?rm=lost">Lost: <img src="/img/wait.gif" alt="loading indicator"></a></td>
 	  </tr>
 	</tbody>
       </table>
