--- a/templates/admin/authentication.tmpl
+++ b/templates/admin/authentication.tmpl
@@ -35,7 +35,7 @@
     </div>
 
     <div id="waitDiv" style="display:none">
-      Loading... <img src="/wait.gif" alt="loading indicator">
+      Loading... <img src="/img/wait.gif" alt="loading indicator">
     </div>
 
     <form id="editAuthentication" action="" method="post">
