--- a/templates/info/reports.tmpl
+++ b/templates/info/reports.tmpl
@@ -234,7 +234,7 @@ $('document').ready(function(){
       </div>
 
     <div id="waitDiv">
-      Loading... <img src="/wait.gif" alt="loading indicator">
+      Loading... <img src="/img/wait.gif" alt="loading indicator">
     </div>
 
     <div id="tabs">
