--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -14,7 +14,7 @@ $.ajaxSetup ({
 <div id="content">  
   <h1>Current Borrowing</h1>
   <div id="waitDiv">
-    Loading... <img src="/wait.gif" alt="loading indicator">
+    Loading... <img src="/img/wait.gif" alt="loading indicator">
   </div>
   
   <div id="myDiv">
