--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -25,7 +25,7 @@ $.ajaxSetup ({
   <div id="main-info-right" class="tone-box">
 
       <div id="waitDiv">
-        Loading... <img src="/wait.gif" alt="loading indicator">
+        Loading... <img src="/img/wait.gif" alt="loading indicator">
       </div>
 
       <div id="region">
