--- a/templates/rotations/enter_stats.tmpl
+++ b/templates/rotations/enter_stats.tmpl
@@ -50,7 +50,7 @@ $('document').ready(function(){
 <div id="center" role="main">
 
     <div id="waitDiv">
-      Loading... <img src="/wait.gif" alt="loading indicator">
+      Loading... <img src="/img/wait.gif" alt="loading indicator">
     </div>
 
     <div id="myDiv">
