--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -13,7 +13,7 @@ $.ajaxSetup ({
 <div id="center" role="main">
   <div>
     <div id="waitDiv">
-      Loading... <img src="/wait.gif" alt="loading indicator">
+      Loading... <img src="/img/wait.gif" alt="loading indicator">
     </div>
     
     <div id="dialog-form" title="Change due date">
