--- a/templates/search/on_hold.tmpl
+++ b/templates/search/on_hold.tmpl
@@ -18,7 +18,7 @@ $.ajaxSetup ({
 <div id="center" role="main">
 
     <div id="waitDiv">
-      Loading... <img src="/wait.gif" alt="loading indicator">
+      Loading... <img src="/img/wait.gif" alt="loading indicator">
     </div>
 
     <div id="myDiv"><br />
