--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -7,31 +7,31 @@
 <div id="content">
 
 <div id="main-info-left" class="tone-box" role="main">
-<h1>FAQs</h1>
+<h1 id="faq-header">FAQs</h1>
 
-<h2>How long does it take to get something delivered?</h2>
-<p>Typically it takes between a week and two weeks for an item to be delivered. Every request is unique and items with limited copies and those already on loan may take longer.</p>
+<h2 id="q-how-long">How long does it take to get something delivered?</h2>
+<p id="a-how-long">Typically it takes between a week and two weeks for an item to be delivered. Every request is unique and items with limited copies and those already on loan may take longer.</p>
 
-<h2>Where does the requested item come from?</h2>
-<p>The item that you have requested could come from any public library in Manitoba.</p>
+<h2 id="q-where-from">Where does the requested item come from?</h2>
+<p id="a-where-from">The item that you have requested could come from any public library in Manitoba.</p>
 
-<h2>Why can&rsquo;t it just get sent to my home?</h2>
-<p>Interlibrary loan is a transaction between two different library systems; it does not facilitate a loan between a local library patron and another library system directly. Interlibrary loan provides local access to library materials from all over the province and once a requested item arrives from the lending library it will need to be processed and your local library will notify you when it is ready to pick-up.</p>
+<h2 id="q-sent-home">Why can't it just get sent to my home?</h2>
+<p id="a-sent-home">Interlibrary loan is a transaction between two different library systems; it does not facilitate a loan between a local library patron and another library system directly. Interlibrary loan provides local access to library materials from all over the province and once a requested item arrives from the lending library it will need to be processed and your local library will notify you when it is ready to pick-up.</p>
 
-<h2>Why is it called fILL?</h2>
-<p>ILL stands for interlibrary loan, and the &#34;f&#34; stands for free and open-source software (FOSS). It is also called fILL as it enables your local library to easily fill your interlibrary loan request online.</p>
+<h2 id="q-why-fill">Why is it called fILL?</h2>
+<p id="a-why-fill">ILL stands for interlibrary loan, and the "f" stands for free and open-source software (FOSS). It is also called fILL as it enables your local library to easily fill your interlibrary loan request online.</p>
 
-<h2>Can I renew my items?</h2>
-<p>While library patrons are not able to renew the item directly, you can make a renewal request through your local library. Your library staff will make the request to the lending library and notify you of the result. It is the decision of the lending library whether to allow inter-library loan items to be renewed.</p>
+<h2 id="q-renew">Can I renew my items?</h2>
+<p id="a-renew">While library patrons are not able to renew the item directly, you can make a renewal request through your local library. Your library staff will make the request to the lending library and notify you of the result. It is the decision of the lending library whether to allow inter-library loan items to be renewed.</p>
 
-<h2>How many items can I request?</h2>
-<p>The maximum number of items you can borrow at one time is a matter of local policy at your library.</p>
+<h2 id="q-how-many">How many items can I request?</h2>
+<p id="a-how-many">The maximum number of items you can borrow at one time is a matter of local policy at your library.</p>
 
-<h2>What happens if the item I want is already on loan?</h2>
-<p>Your local library can request a hold on the item, after it is returned the ILL request will be processed.</p>
+<h2 id="q-on-loan">What happens if the item I want is already on loan?</h2>
+<p id="a-on-loan">Your local library can request a hold on the item, after it is returned the ILL request will be processed.</p>
 
-<h2>Do I pay late fines to my local public library or to the lending library?</h2>
-<p>If your item is late, you will pay late fees to your local public library. Library patrons should always try to return any borrowed items by the due date to ensure service is not disrupted for other library patrons.</p>
+<h2 id="q-late">Do I pay late fines to my local public library or to the lending library?</h2>
+<p id="a-late">If your item is late, you will pay late fees to your local public library. Library patrons should always try to return any borrowed items by the due date to ensure service is not disrupted for other library patrons.</p>
 
 </div><!--main-info-left-->
 
