--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -12,7 +12,7 @@ $.ajaxSetup ({
 </script>
 
 <div id="content">  
-  <h1>Current Borrowing</h1>
+  <!-- <h1>Current Borrowing</h1> -->
   <div id="waitDiv">
     Loading... <img src="/img/wait.gif" alt="loading indicator">
   </div>
