i18n help, and tweaks to search

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -131,7 +131,7 @@
 	search_process to feed the *real* search page -->
       <input id="query" type="text" name="query" placeholder="Search" value="<TMPL_VAR name='query'>">
       <input id="rm" type="hidden" name="rm" value="search_form">
-      <input id="search-button" type="submit" value="Go" class="public-style">
+      <input id="search-submit-button" type="submit" value="Go" class="public-style">
     </form>
   </div>
 </div> <!-- search-container -->
